fixed the home room swiper images size on mobile

--- a/scss/pages/home/_home-rooms.scss
+++ b/scss/pages/home/_home-rooms.scss
@@ -57,6 +57,13 @@
         }
     }
     &__slider {
+        &--swiper-slidepic {
+            height: 400px;
+            object-fit: cover;
+            @include desktop {
+                height: 700px;
+            }
+        }
         position: relative;
         @include desktop {
             height: 350px;
